@@ -60,9 +60,3 @@ TRANSPOSE_FUNC(jmi_matrix_from_fortran_int, jmi_int_t, jmi_real_t, 0)
 COPY_FUNC(jmi_copy_matrix_to_int, jmi_real_t, jmi_int_t)
 COPY_FUNC(jmi_copy_matrix_from_int, jmi_int_t, jmi_real_t)
 
-void jmi_free_str_arr(jmi_string_array_t* arr) {
-    int i;
-    for (i = 1; i <= arr->num_elems; i++) {
-        JMI_FREE(jmi_array_val_1(arr,i));
-    }
-}
